# h5hist

./: README.md  setup.cfg
src/examples/: foo.h5  write.py
src/h5hist/: h5hist.py  h5hist.py~
src/h5hist.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
