[metadata]
name = h5hist
version = 0.0.1
author = Rodrigo G. Ruiz	
author_email = rgruiz0001@gmail.com
description = A project to develop a library to read and write histograms into hdf5.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/rodrigruiz/h5hist.git
project_urls =
    Bug Tracker = https://github.com/rodrigruiz/h5hist/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    boost_histogram
    h5py
[options.packages.find]
where = src